# ProjectPhoenix

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  run.sh
Engine/include/: Action.h  Animation.h  Assets.h  Components.h  Default_Scene.h  Editor.h  Entity.h  EntityManager.h  GameEngine.h  Logger.h  Physics.h  Scene.h  Tilemap.h  Vec2.h
Engine/src/: Action.cpp  Animation.cpp  Assets.cpp  Default_Scene.cpp  Editor.cpp  Entity.cpp  EntityManager.cpp  GameEngine.cpp  Logger.cpp  Physics.cpp  Scene.cpp  Tilemap.cpp  Vec2.cpp
config/: assets.txt  game.txt  testmap.txt
docs/: Config.md  DefaultScene.md
include/: ExampleScene.h
src/: ExampleScene.cpp  main.cpp
